--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ img {
 
 label {
 	display: block;
-	font: 1.4rem 'Fira Sans', sans-serif;
+	font: 1.6rem 'Fira Sans', sans-serif;
 }
 
 input,
@@ -43,4 +43,8 @@ label {
 
 p {
 	font-size: 40px;
+}
+
+input {
+	width: 300px;
 }
